bk_ida/gccida/c0/put_condition_code
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6003:27: error: must use 'enum' tag to refer to type 'rtx_code'
void  put_condition_code( rtx_code code, machine_mode mode, int reverse, int fp, FILE *file) 
                          ^
                          enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6003:42: error: must use 'enum' tag to refer to type 'machine_mode'
void  put_condition_code( rtx_code code, machine_mode mode, int reverse, int fp, FILE *file) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6009:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code bypass_code; // [rsp+8h] [rbp-28h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6010:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code second_code; // [rsp+Ch] [rbp-24h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6015:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+28h] [rbp-8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6016:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code codea; // [rsp+2Ch] [rbp-4h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6036:2: error: expected expression
 struct suffix = "DW_OP_ne" + 6; 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6039:2: error: expected expression
 struct suffix = "e"; 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6044:16: error: expected identifier or '('
 struct suffix = "ns"; 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6050:16: error: expected identifier or '('
 struct suffix = "DW_OP_ge" + 6; 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6056:16: error: expected identifier or '('
 struct suffix = "CIE Identifier Tag" + 17; 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6061:16: error: expected identifier or '('
 struct suffix = "DW_OP_le" + 6; 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6066:16: error: expected identifier or '('
 struct suffix = "\t%s %d\t%s" + 8; 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6072:16: error: expected identifier or '('
 struct suffix = "global" + 5; 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6078:22: error: use of undeclared identifier 'unk_80724E'
v6 = ( const char *)&unk_80724E; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6080:22: error: use of undeclared identifier 'unk_80724B'
v6 = ( const char *)&unk_80724B; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6081:16: error: expected identifier or '('
 struct suffix = v6; 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6088:22: error: use of undeclared identifier 'off_807247'
v5 = ( const char *)&off_807247; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/i386.c:6089:16: error: expected identifier or '('
 struct suffix = v5; 
               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_condition_code/src/obj/i386.o] Error 1
